--- a/Neural Machine Translation/NMT.ipynb
+++ b/Neural Machine Translation/NMT.ipynb
@@ -956,10 +956,10 @@
     "        print(\"No valid translations found.\")\n",
     "        return None, None\n",
     "    # Calculate BLEU score\n",
-    "    print('BLEU-1: %f' % corpus_bleu(actual, predicted, weights=(1.0, 0, 0, 0)))\n",
-    "    print('BLEU-2: %f' % corpus_bleu(actual, predicted, weights=(0.5, 0.5, 0, 0)))\n",
-    "    print('BLEU-3: %f' % corpus_bleu(actual, predicted, weights=(0.3, 0.3, 0.3, 0)))\n",
-    "    print('BLEU-4: %f' % corpus_bleu(actual, predicted, weights=(0.25, 0.25, 0.25, 0.25)))\n",
+    "    print('BLEU-1: ' , corpus_bleu(actual, predicted, weights=(1.0, 0, 0, 0)))\n",
+    "    print('BLEU-2: ' , corpus_bleu(actual, predicted, weights=(0.5, 0.5, 0, 0)))\n",
+    "    print('BLEU-3: ' , corpus_bleu(actual, predicted, weights=(0.3, 0.3, 0.3, 0)))\n",
+    "    print('BLEU-4: ' , corpus_bleu(actual, predicted, weights=(0.25, 0.25, 0.25, 0.25)))\n",
     "    return actual, predicted\n",
     "\n",
     "\n",
@@ -968,8 +968,7 @@
     "actual, predicted = evaluate_model(model, preprocessor.token_target, padded_test_context, preprocessor.test_raw_test)\n",
     "\n",
     "\n",
-    "# actual, predicted = evaluate_model(model, preprocessor.token_target, padded_test_context[:10], test_target[:10])\n",
-    "\n"
+    
    ]
   },
   {
